<resources>
    <string name="app_name">GetAway</string>
    <string name="point_on_map">Go explore</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="yourAirport">Your airport</string>
    <string name="close">Close</string>
    <string name="search_for_your_airport">Search for your airport</string>
    <string name="departureAirport">Departure airport</string>
    <string name="help_map">Try tapping anywhere on the map or shake your device</string>
    <string name="dismiss">Dismiss</string>
    <string name="give_permission">Grant Permission</string>
    <string name="explain_permission">You can give the app permission to read your location to have the closes airport pre-selected and sorting the airports by distance from your location.</string>
    <string name="explain_missing_airport">Please select an airport or grant location permission</string>
    <string name="tell_me_more">Tell me more</string>
</resources>
